Updated unicode to a string and added tweepy to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 appdirs==1.4.3
 click==6.7
 Flask==0.12.2
+future==0.16.0
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+oauthlib==2.0.2
 packaging==16.8
 pkg-resources==0.0.0
 pyparsing==2.2.0
+python-twitter==3.2.1
+requests==2.14.2
+requests-oauthlib==0.8.0
 six==1.10.0
+tweepy==3.5.0
 Werkzeug==0.12.2
